# GaijinTest

./: .gitignore  CMakeLists.txt  README.md  README.rst
Client/: client.cpp
Protocol/: connection.h  protocol.cpp  protocol.h
Server/: config_store.cpp  config_store.h  server.cpp  server_dispatcher.cpp  server_dispatcher.h
boost/lib/: libboost_chrono-vc143-mt-gd-x32-1_88.lib  libboost_chrono-vc143-mt-gd-x64-1_88.lib  libboost_chrono-vc143-mt-x32-1_88.lib  libboost_chrono-vc143-mt-x64-1_88.lib  libboost_system-vc143-mt-gd-x32-1_88.lib  libboost_system-vc143-mt-gd-x64-1_88.lib  libboost_system-vc143-mt-x32-1_88.lib  libboost_system-vc143-mt-x64-1_88.lib  libboost_thread-vc143-mt-gd-x32-1_88.lib  libboost_thread-vc143-mt-gd-x64-1_88.lib  libboost_thread-vc143-mt-x32-1_88.lib  libboost_thread-vc143-mt-x64-1_88.lib
boost/lib/cmake/boost_chrono-1.88.0/: boost_chrono-config.cmake
boost/lib/cmake/boost_headers-1.88.0/: boost_headers-config.cmake
boost/lib/cmake/boost_system-1.88.0/: boost_system-config.cmake
boost/lib/cmake/boost_thread-1.88.0/: boost_thread-config.cmake
client/: CMakeLists.txt  client.cpp
net/: CMakeLists.txt  connection.cpp  connection.h  memory.h  protocol.cpp  protocol.h
server/: CMakeLists.txt  config_store.cpp  server.cpp  server_dispatcher.cpp  server_dispatcher.h
